manifests/k8/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-course-deploy
  namespace: infnet-app
spec:
  replicas: 4
  selector:
    matchLabels:
      app: app-course
  template:
    metadata:
      labels:
        app: app-course
    spec:
      containers:
        - name: app-course
          image: silviobassi/app-course:1.8.1  # Substitua pelo nome correto da imagem
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 15m
              memory: 428M
            limits:
              cpu: 512m
              memory: 1G
          livenessProbe:
            httpGet:
              path: "/health"
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: "/health"
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: app-course-svc
  namespace: infnet-app
spec:
  selector:
    app: app-course
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
