manifests/k8/app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: infnet-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: app.local  # Substitua pelo seu domínio ou IP externo
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-course-svc
            port:
              number: 80
